@@ -1,5 +1,5 @@
 name             = DBIx-MultiStatementDo
-version          = 0.20000
+version          = 0.30000
 author           = Emanuele Zeppieri <emazep@cpan.org>
 license          = Perl_5
 copyright_holder = Emanuele Zeppieri
